; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd_print.c_checkAnalType.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd_print.c_checkAnalType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }

@R_ANAL_OP_FAMILY_PRIV = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32)* @checkAnalType to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @checkAnalType(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = icmp eq i32 %6, 99
  br i1 %7, label %8, label %14

8:                                                ; preds = %2
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  switch i32 %11, label %13 [
    i32 131, label %12
    i32 128, label %12
    i32 135, label %12
  ]

12:                                               ; preds = %8, %8, %8
  store i32 1, i32* %3, align 4
  br label %53

13:                                               ; preds = %8
  br label %52

14:                                               ; preds = %2
  %15 = load i32, i32* %5, align 4
  %16 = icmp eq i32 %15, 115
  br i1 %16, label %17, label %30

17:                                               ; preds = %14
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @R_ANAL_OP_FAMILY_PRIV, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %17
  store i32 1, i32* %3, align 4
  br label %53

24:                                               ; preds = %17
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  switch i32 %27, label %29 [
    i32 130, label %28
  ]

28:                                               ; preds = %24
  store i32 1, i32* %3, align 4
  br label %53

29:                                               ; preds = %24
  br label %51

30:                                               ; preds = %14
  %31 = load i32, i32* %5, align 4
  %32 = icmp eq i32 %31, 105
  br i1 %32, label %33, label %39

33:                                               ; preds = %30
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  switch i32 %36, label %38 [
    i32 129, label %37
    i32 133, label %37
  ]

37:                                               ; preds = %33, %33
  store i32 1, i32* %3, align 4
  br label %53

38:                                               ; preds = %33
  br label %50

39:                                               ; preds = %30
  %40 = load i32, i32* %5, align 4
  %41 = icmp eq i32 %40, 106
  br i1 %41, label %42, label %49

42:                                               ; preds = %39
  %43 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %44 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 8
  switch i32 %45, label %47 [
    i32 132, label %46
    i32 134, label %46
  ]

46:                                               ; preds = %42, %42
  store i32 1, i32* %3, align 4
  br label %53

47:                                               ; preds = %42
  br label %48

48:                                               ; preds = %47
  br label %49

49:                                               ; preds = %48, %39
  br label %50

50:                                               ; preds = %49, %38
  br label %51

51:                                               ; preds = %50, %29
  br label %52

52:                                               ; preds = %51, %13
  store i32 0, i32* %3, align 4
  br label %53

53:                                               ; preds = %52, %46, %37, %28, %23, %12
  %54 = load i32, i32* %3, align 4
  ret i32 %54
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
